[package]
edition = "2021"
name = "up2stream-uart"
version = "0.1.0"
readme = "README.md"
authors = ["Andrew Doble"]
description = "A driver for the Arylic Up2Stream Pro using the UART port API."

[dependencies]
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }


# arrayvec has it's default-feature disabled so that it can function in a no-std environment
arrayvec = { version = "0.7.4", default-features = false }
fugit = "0.3.6"
nb = "0.1.2"

[dev-dependencies]
embedded-hal-mock = "0.7.2"


